[package]
name = "blockless-web-cgi"
version = "0.1.0"
description = "blockless wasm cgi demo"
keywords = ["webassembly", "wasm"]
readme = "README.md"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/blocklessnetwork/blockless-web-cgi"

[dependencies]
bytecodec = "0.4.15"
httpcodec = "0.2.3"
blockless-sdk = "0.1.1"